Added support for Spark 4.0.0 (#98)
* Added support for Spark 4.0.0